--- a/ui/package.json
+++ b/ui/package.json
@@ -18,5 +18,10 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.85.1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
