--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "body-parser": "^2.2.0",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0"
   }
 }
