--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "uuid": "^11.1.0"
   }
 }
