--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0",
     "uuid": "^11.1.0"
   }
 }
